# cric-search

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json
science/: analysis.ipynb  pyproject.toml
src/: routes.tsx
src/components/sidebar/components/: Brand.tsx  Content.tsx
