[tool.poetry]
name = "science"
version = "0.1.0"
description = ""
authors = ["Tommy Smith <tommy.smith023@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.18.6"
ipykernel = "^6.24.0"
plotly = "^5.15.0"
pandas = "^2.0.3"
pyarrow = "^12.0.1"
nbformat = "^5.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
